--- a/index.html
+++ b/index.html
@@ -37,19 +37,9 @@
         <input type="text" id="code" placeholder="Enter deactivation code">
         <button onclick="checkCode()">Submit</button>
     </div>
+    <p id="flag" style="display:none;"></p>
+    
     <script>
-        // Obfuscate the flag
-        function decodeFlag(encodedFlag) {
-            let decodedFlag = '';
-            for (let i = 0; i < encodedFlag.length; i++) {
-                decodedFlag += String.fromCharCode(encodedFlag.charCodeAt(i) - 1);
-            }
-            return decodedFlag;
-        }
-
-        var encodedFlag = "JHFM{KbwbTdsjqu_Pcfgtdbujpo_Fvo}";
-        var flag = decodeFlag(encodedFlag);
-
         // Timer countdown
         var timeLeft = 600;
         var timer = document.getElementById('timer');
@@ -65,11 +55,19 @@
             }
         }, 1000);
 
+        // Obfuscated flag
+        var encodedFlag = "SUdOSVRFe0phdmFTY3JpcHRfT2JmdXNjYXRpb25fRnVufQ=="; // Base64 encoded flag
+        
+        function decodeFlag() {
+            return atob(encodedFlag);
+        }
+
         // Check deactivation code
         function checkCode() {
             var code = document.getElementById('code').value;
             if (code === 'uifbq39uru4f248hf1i32d83') {
-                alert("Flag: " + flag); // Show the decoded flag
+                document.getElementById('flag').textContent = decodeFlag();
+                document.getElementById('flag').style.display = 'block';
             } else {
                 alert('Incorrect code. Try again.');
             }
@@ -77,3 +75,4 @@
     </script>
 </body>
 </html>
+
