--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             }
         }, 1000);
 
-        // Obfuscated flag
-        var encodedFlag = "SUdOSVRFe0phdmFTY3JpcHRfT2JmdXNjYXRpb25fRnVufQ=="; // Base64 encoded flag
-        
+        // Base64-encoded flag (IGNITE{JavaScript_Obfuscation_Fun})
+        var encodedFlag = "SUdOSVRFe0phdmFTY3JpcHRfT2JmdXNjYXRpb25fRnVufQ=="; 
+
         function decodeFlag() {
             return atob(encodedFlag);
         }
@@ -75,4 +75,5 @@
     </script>
 </body>
 </html>
+
 
